Correct info page spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3rem 1.5rem 1rem;
+    padding: 2rem 1.5rem 1rem;
 }
 
 .trumpwrap {
@@ -74,6 +74,10 @@ main {
 }
 
 .trumpwrap > * + * {
+    margin-block-start: var(--gap); 
+}
+
+.text-only > * + * {
     margin-block-start: var(--gap); 
 }
 
